--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.servlet.session.tracking-modes=cookie
+
+kakao.api_key={api_key}
+kakao.redirect_uri={redirect_uri}
+
+cloud.aws.credentials.access-key={aws_access_key}
+cloud.aws.credentials.secret-key={aws_secret_key}
+cloud.aws.region.static={aws_region_static}
+cloud.aws.s3.bucket={aws_bucket}
