--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.servlet.session.tracking-modes=cookie
+#cloud.aws.credentials.access-key={access-key}
+#cloud.aws.credentials.secret-key={secret-key}
+#cloud.aws.region.static=ap-southeast-2
+#cloud.aws.s3.bucket=hexa-test
